#1 [FEAT] 향수 카테고리 정보 조회 API 구현 #메이
