# src/routes/perfume.route.js
@@ -1,8 +1,9 @@
 import express from "express";
 import asyncHandler from "express-async-handler";
 
-import { perfumePreview } from "../controllers/perfume.controller.js";
+import { perfumePreview, categoryPreview } from "../controllers/perfume.controller.js";
 
 export const perfumeRouter = express.Router({ mergeParams: true });
 
 perfumeRouter.get("/getPerfumes", asyncHandler(perfumePreview));
+perfumeRouter.get("/getCategories", asyncHandler(categoryPreview));
